--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,1 +1,62 @@
 @use "./generic/reset";
+
+a {
+  text-decoration: none;
+}
+
+$main-color: rgb(1, 36, 186);
+$accent-color: rgb(9, 216, 98);
+$text-color: rgb(53, 53, 53);
+
+body {
+  background-image: url("../images/background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  font-family: 'Montserrat', sans-serif;;
+  height: 100vh;
+  background-size: cover;
+}
+
+.container {
+  max-width: 1100px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+
+  .logo {
+    font-size: 2.5rem;
+    font-family: Montserrat, sans-serif;
+    font-weight: 700;
+    color: $main-color;
+
+    a {
+      color: $main-color;
+    }
+  }
+
+  .list {
+    display: flex;
+
+    .navi {
+      display: flex;
+
+      .list__item {
+        padding-right: 40px;
+
+        a {
+          color: $text-color;
+        }
+
+        &:last-child {
+          padding-right: 0;
+        }
+      }
+    }
+  }
+}
